src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Change_Order_Difference__c</fullName>
        <description>Maps over from the Endeavor per line item on the overall difference (either an addition or deletion)</description>
        <label>Change Order Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_to_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted to Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_List__c</fullName>
        <label>Extended List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extended_Net_Price__c</fullName>
        <label>Extended Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <formula>Quantity *  UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gross_margin__c</fullName>
        <label>Gross margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GuidedSelling__customfield__c</fullName>
        <description>customfield</description>
        <inlineHelpText>customfield</inlineHelpText>
        <label>customfield</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price_Per_Unit__c</fullName>
        <label>List Price Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maintenance_Amount__c</fullName>
        <label>Maintenance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modified_Quantity__c</fullName>
        <label>Modified Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>Extended_Price__c * (1 -  (Discount/100) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prod_Category__c</fullName>
        <label>Prod Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Type__c</fullName>
        <label>Prod Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Change__c</fullName>
        <description>Syncs over from Endeavor for Change Order Opportunities only</description>
        <label>Quantity Change</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Category__c</fullName>
        <formula>Text(PricebookEntry.Product2.Sales_Order_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Order Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_E_Fee__c</fullName>
        <label>T&amp;E Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
</CustomObject>